namespace SwinAdventure;

enum Direction : short
{
	north,
	west,
	south,
	east,
	up = north,
	left = west,
	down = south,
	right = west
}
